--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  color: #2E2F42;
+  color: #434455;
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-style: normal;
@@ -9,7 +9,6 @@ ul {
 	list-style-type: none;
 }
 a {
-    font-style: normal;
     color: currentColor;
     text-decoration: none;  
     line-height: 1.5;
@@ -17,38 +16,46 @@ a {
 }
 
 .logo {
+    color: #4d5ae5;
     font-family: "Raleway", sans-serif;
     font-size: 18px;
     font-weight: 700;
-    line-height: 1.16;
-    letter-spacing: 0.033em;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
     text-transform: uppercase;
 }
 
-.web {
-  color: #4D5AE5;
+.studio {
+  color: #2E2F42;
     font-family: "Raleway";
     font-size: 18px;
     font-weight: 700;
-    line-height: 1.16;
-    letter-spacing: 0.033em;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
     text-transform: uppercase;
 }
 
 .menu-link {
+    color: #2E2F42;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
-.menu-link:active {
+.menu-link:hover,
+.menu-link:focus
+ {
   color: #404BBF;
 }
-
+.contacts {
+  font-style: normal;
+}
 .contacts-item {
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
-.contacts-item:active {
+.contacts-item:hover,
+.contacts-item:focus
+ {
   color: #404BBF;
 }
 .header {
@@ -76,20 +83,9 @@ a {
   background: #404BBF;
 }
 
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
 
 .advantages-name {
+    color: #2E2F42;
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
@@ -97,7 +93,6 @@ a {
 }
 
 .advantages-description {
-  color: #434455;
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
@@ -105,6 +100,7 @@ a {
   background: #F4F4FD;
 }
 .team-title {
+    color: #2E2F42;
     text-align: center;
     font-size: 36px;
     font-weight: 700;
@@ -113,8 +109,11 @@ a {
     text-transform: capitalize;
 }
 
-
+.team-item {
+  background-color: #FFFFFF;
+}
 .team-member {
+      color: #2E2F42;
       text-align: center;
       font-size: 20px;
       font-weight: 500;
@@ -123,13 +122,13 @@ a {
 }
 
 .team-decrription {
-  color: #434455;
     text-align: center;
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
 
 .portfolio-title {
+    color: #2E2F42;
     text-align: center;
     font-size: 36px;
     font-weight: 700;
@@ -139,6 +138,7 @@ a {
 }
 
 .portfolio-name {
+    color: #2E2F42;
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
@@ -146,7 +146,6 @@ a {
 }
 
 .porfolio-name-descr {
-  color: #434455;
     line-height:1.5;
     letter-spacing: 0.02em;
 }
@@ -154,12 +153,12 @@ a {
 .footer {
   background: #2E2F42;
 }
-.footer-logo {
-  color: #F4F4FD;
-    font-family: Raleway;
+.footer-studio {
+    color: #F4F4FD;
+    font-family: "Raleway", sans-serif;
     font-size: 18px;
     font-weight: 700;
-    line-height: 1.16;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
 }
